--- a/css/main.css
+++ b/css/main.css
@@ -192,7 +192,7 @@ a.btn i {
     transition: opacity 200ms ease-in-out;
 }
 
-.game-screen.hide {
+.initiate .game-screen {
     opacity: 0;
 }
 
@@ -224,7 +224,7 @@ a:hover {
 
 html,
 body {
-  height: 100%;
+    height: 100%;
   background-color: #333;
 }
 
@@ -246,7 +246,7 @@ body {
 
 
 .name {
-    max-width: 18rem;
+    /* max-width: 18rem; */
 }
 .id {
     min-width: 3rem;
@@ -257,6 +257,12 @@ body {
  */
 .masthead {
   margin-bottom: 2rem;
+  transform: translateY(-150px);
+  transition: transform 300ms ease-out;
+}
+
+.initiate .masthead {
+    transform: translateY(0px);
 }
 
 .masthead-brand {
@@ -306,6 +312,29 @@ body {
   font-weight: 700;
 }
 
+.torrents-container .progress {
+    height: 1.4rem;
+    background: transparent;
+    background-image: linear-gradient(to right, #57abff40 , #004b96);
+}
+
+.torrents-container .progress-bar {
+    background-color: #ffeb00;
+    color: #a57a00;
+    text-shadow: none;
+    box-shadow: 0px 0px 31px 0px #ffeb00;
+    transition: width 600ms ease, box-shadow 3000ms ease;
+}
+
+
+.tor-toolbar {
+    transform: translateY(-200px);
+    transition: transform 300ms 300ms ease-out;
+}
+
+.initiate .tor-toolbar {
+    transform: translateY(0px);
+}
 
 /*
  * Footer
