--- a/css/main.css
+++ b/css/main.css
@@ -77,8 +77,7 @@ canvas {
     transition: all 200ms 300ms ease-in-out;
 }
 
-    var torrents = []
-.loading-msg.initialising .loading-num {
+var torrents=[] .loading-msg.initialising .loading-num {
     max-height: 0px;
     transition: all 300ms ease-in-out;
 }
@@ -106,7 +105,7 @@ a.btn i {
     min-width: 3rem;
     text-shadow: 2px 2px 2px #0000004d;
     background: #00000030;
-    var torrents = []
+    var torrents=[]
 }
 
 .card.country-menu {
@@ -199,66 +198,247 @@ a.btn i {
 /*
  * Globals
  */
-
 /* Links */
 a,
 a:focus,
 a:hover {
-  color: #fff;
+    color: #fff;
 }
 
 /* Custom default button */
 .btn-secondary,
 .btn-secondary:hover,
 .btn-secondary:focus {
-  color: #333;
-  text-shadow: none; /* Prevent inheritance from `body` */
-  background-color: #fff;
-  border: .05rem solid #fff;
+    color: #333;
+    text-shadow: none;
+    /* Prevent inheritance from `body` */
+    background-color: #fff;
+    border: .05rem solid #fff;
 }
-
 
 /*
  * Base structure
  */
+html {
+    height: auto;
+}
 
 html,
 body {
-    height: 100%;
-  background-color: #333;
+    background-color: #333;
+    min-height: 100vh;
 }
 
 body {
-  display: -ms-flexbox;
-  display: -webkit-box;
-  display: flex;
-  -ms-flex-pack: center;
-  -webkit-box-pack: center;
-  justify-content: center;
-  color: #fff;
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+    height: 100%;
+    display: -ms-flexbox;
+    display: -webkit-box;
+    display: flex;
+    -ms-flex-pack: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    color: #fff;
+    /* text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5); */
+    box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
 
 .cover-container {
-  max-width: 42em;
+    max-width: 42em;
 }
-
 
 .name {
     /* max-width: 18rem; */
 }
+
 .id {
     min-width: 3rem;
+}
+
+.btn-icon {}
+
+.bottom-card {
+    bottom: 0;
+    border: none;
+    background: #7d7d7d;
+    transform: translateY(200px);
+    transition: transform 300ms 300ms ease-out;
+}
+
+.selected-list-rp {
+    max-height: calc(100vh - 11rem);
+    overflow-y: scroll;
+    background: #191919;
+}
+
+.df-show-result {
+    color: #a5a5a5;
+}
+
+.df-show-result-details {
+    color: #fff;
+
+}
+
+.df-result-btn, .df-result-btn:active {
+    color: #fff;
+    background-color: #343a40;
+    border-bottom: 2px solid #1b1b1b2b;
+}
+
+.df-result-btn:hover {
+    background-color: #23272b;
+    border-color: #1d2124;
+}
+
+.df-result-btn.show-selected {
+    background-color: #002a69;
+}
+
+.ep-result-btn, .ep-result-btn:active {
+    color: #ffffff70;
+    background-color: #20005d;
+    border-bottom: 2px solid #1b1b1b2b;
+}
+
+.ep-result-btn:hover {
+    color: #fff;
+    background-color: #35009a;
+    border-color: #1d212420;
+}
+
+.btn-purple, .btn-purple:active {
+    color: #fff;
+    background-color: #35009a;
+}
+
+.btn-purple:hover {
+    color: #ffffff70;
+    background-color: #20005d;
+}
+/*
+.df-result-btn:focus {
+    background-color: #23272b;
+    border-color: #1d2124;
+} */
+
+.right-panel-inner {
+    right: 0;
+    max-height: calc(100vh - 48px);
+    min-height: calc(100vh - 48px);
+    border: none;
+    --twidth: 26rem;
+    max-width: var(--twidth);
+    min-width: var(--twidth);
+    background: #002a69;
+    transform: translateX(50rem);
+    transition: transform 300ms ease-in-out;
+    z-index: -1;
+    overflow-y: scroll;
+}
+
+.right-panel-outer {
+    right: 0;
+    max-height: calc(100vh - 48px);
+    min-height: calc(100vh - 48px);
+    border: none;
+    --twidth: 26rem;
+    max-width: var(--twidth);
+    min-width: var(--twidth);
+    background: #280075;
+    transform: translateX(50rem);
+    transition: transform 300ms ease-in-out;
+    z-index: -1;
+    overflow-y: scroll;
+}
+
+.tv-show-poster-img {
+    min-height: 38rem;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #191919;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #a6a6a6;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+.right-panel {
+    right: 0;
+    max-height: calc(100vh - 48px);
+    min-height: calc(100vh - 48px);
+    border: none;
+    --twidth: 26rem;
+    max-width: var(--twidth);
+    min-width: var(--twidth);
+    background: #404040;
+    transform: translateX(100vw);
+    transition: transform 300ms ease-in-out;
+}
+
+.dragonfly-search-panel {
+    background: #191919;
+}
+
+.show-search-btn, .add-dropdown-toggle {
+    background: #2b3035;
+    border-color: #2b3035;
+}
+
+.search-poster-img {
+    max-width: 6rem;
+}
+
+.right-panel .rss-title {}
+
+.right-panel.show {
+    transform: translateX(0rem);
+}
+.right-panel-inner.show {
+    transform: translateX(-25rem);
+}
+.right-panel-outer.show {
+    transform: translateX(-50rem);
+}
+
+.magnet-link-textarea {
+    min-width: 14rem;
+}
+
+.rss-link-textarea {
+    min-width: 14rem;
+}
+
+.initiate a.btn:focus, .initiate button.btn:focus {
+    box-shadow: none !important;
+}
+
+.initiate .btn.dropdown-toggle.no-arrow::after {
+    content: unset;
 }
 
 /*
  * Header
  */
 .masthead {
-  margin-bottom: 2rem;
-  transform: translateY(-150px);
-  transition: transform 300ms ease-out;
+    margin-bottom: 2rem;
+    transform: translateY(-150px);
+    transition: transform 300ms ease-out;
 }
 
 .initiate .masthead {
@@ -266,56 +446,57 @@ body {
 }
 
 .masthead-brand {
-  margin-bottom: 0;
+    margin-bottom: 0;
 }
 
 .nav-masthead .nav-link {
-  padding: .25rem 0;
-  font-weight: 700;
-  color: rgba(255, 255, 255, .5);
-  background-color: transparent;
-  border-bottom: .25rem solid transparent;
+    padding: .25rem 0;
+    font-weight: 700;
+    color: rgba(255, 255, 255, .5);
+    background-color: transparent;
+    border-bottom: .25rem solid transparent;
 }
 
 .nav-masthead .nav-link:hover,
 .nav-masthead .nav-link:focus {
-  border-bottom-color: rgba(255, 255, 255, .25);
+    border-bottom-color: rgba(255, 255, 255, .25);
 }
 
-.nav-masthead .nav-link + .nav-link {
-  margin-left: 1rem;
+.nav-masthead .nav-link+.nav-link {
+    margin-left: 1rem;
 }
 
 .nav-masthead .active {
-  color: #fff;
-  border-bottom-color: #fff;
+    color: #fff;
+    border-bottom-color: #fff;
 }
 
 @media (min-width: 48em) {
-  .masthead-brand {
-    float: left;
-  }
-  .nav-masthead {
-    float: right;
-  }
-}
+    .masthead-brand {
+        float: left;
+    }
 
+    .nav-masthead {
+        float: right;
+    }
+}
 
 /*
  * Cover
  */
 .cover {
-  /* padding: 0 1.5rem; */
+    /* padding: 0 1.5rem; */
 }
+
 .cover .btn-lg {
-  padding: .75rem 1.25rem;
-  font-weight: 700;
+    padding: .75rem 1.25rem;
+    font-weight: 700;
 }
 
 .torrents-container .progress {
     height: 1.4rem;
     background: transparent;
-    background-image: linear-gradient(to right, #57abff40 , #004b96);
+    background-image: linear-gradient(to right, #57abff40, #004b96);
 }
 
 .torrents-container .progress-bar {
@@ -326,13 +507,7 @@ body {
     transition: width 600ms ease, box-shadow 3000ms ease;
 }
 
-
-.tor-toolbar {
-    transform: translateY(-200px);
-    transition: transform 300ms 300ms ease-out;
-}
-
-.initiate .tor-toolbar {
+.initiate .bottom-card {
     transform: translateY(0px);
 }
 
@@ -340,5 +515,120 @@ body {
  * Footer
  */
 .mastfoot {
-  color: rgba(255, 255, 255, .5);
+    color: rgba(255, 255, 255, .5);
+}
+
+.form-label-group>input,
+.form-label-group>label {
+    height: unset;
+    padding: .75rem;
+}
+
+.form-label-group>label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    font-size: 16px;
+    width: 100%;
+    margin-bottom: 0;
+    margin-top: 3.55rem;
+    margin-left: 1rem;
+    /* Override default `<label>` margin */
+    line-height: 1.5;
+    color: #495057;
+    pointer-events: none;
+    cursor: text;
+    /* Match the input under the label */
+    border: 1px solid transparent;
+    border-radius: .25rem;
+    transition: all .1s ease-in-out;
+}
+
+.form-label-group input::-webkit-input-placeholder {
+    color: transparent;
+}
+
+.form-label-group input:-ms-input-placeholder {
+    color: transparent;
+}
+
+.form-label-group input::-ms-input-placeholder {
+    color: transparent;
+}
+
+.form-label-group input::-moz-placeholder {
+    color: transparent;
+}
+
+.form-label-group input::placeholder {
+    color: transparent;
+}
+
+.form-label-group textarea::-webkit-input-placeholder {
+    color: transparent;
+}
+
+.form-label-group textarea:-ms-input-placeholder {
+    color: transparent;
+}
+
+.form-label-group textarea::-ms-input-placeholder {
+    color: transparent;
+}
+
+.form-label-group textarea::-moz-placeholder {
+    color: transparent;
+}
+
+.form-label-group textarea::placeholder {
+    color: transparent;
+}
+
+.form-label-group input:not(:placeholder-shown) {
+    padding-top: 1.25rem;
+    padding-bottom: .25rem;
+}
+
+.form-label-group input:not(:placeholder-shown)~label {
+    padding-top: .25rem;
+    padding-bottom: .25rem;
+    font-size: 12px;
+    color: #777;
+}
+
+.form-label-group textarea:not(:placeholder-shown) {
+    padding-top: 1.25rem;
+    padding-bottom: .25rem;
+}
+
+.form-label-group textarea:not(:placeholder-shown)~label {
+    padding-top: .25rem;
+    padding-bottom: .25rem;
+    font-size: 12px;
+    color: #777;
+}
+
+/* Fallback for Edge
+-------------------------------------------------- */
+@supports (-ms-ime-align: auto) {
+    .form-label-group>label {
+        display: none;
+    }
+
+    .form-label-group input::-ms-input-placeholder {
+        color: #777;
+    }
+}
+
+/* Fallback for IE
+-------------------------------------------------- */
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+    .form-label-group>label {
+        display: none;
+    }
+
+    .form-label-group input:-ms-input-placeholder {
+        color: #777;
+    }
 }
